# BackupHandler

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  RUNBOOK.md  ReadMe.md  SECURITY.md  main.py  pyproject.toml  requirements.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
banner/: banner_show.py
bot/: BotHandler.py
bot/help/: instructions.md
config/: bot_config.ini.example  config.ini.example  db_config.ini.example  email_config.ini.example
contrib/systemd/: backup-handler-drill.service  backup-handler-drill.timer  backup-handler.service  backup-handler.timer
db_backup/: mysql_backup.py
email_nots/: email.py
scripts/: backup-handler.service  com.backup-handler.plist  install_service.sh  install_windows_task.ps1  restore_drill.sh  setup.sh
src/: __init__.py  __version__.py  argparse_setup.py  backup.py  compression.py  config.py  db_sync.py  dedup.py  email_notify.py  encryption.py  heartbeat.py  logger.py  manifest.py  restore.py  retention.py  s3_sync.py  scheduler.py  snapshot.py  sync.py  tailscale.py  test.py  utils.py  verify.py  webhook_notify.py
tests/: conftest.py  test_config.py  test_dedup.py  test_email_notify.py  test_encryption.py  test_features.py  test_heartbeat.py  test_logger.py  test_restore.py  test_utils.py  test_verify.py  test_webhook_notify.py
