[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "backup-handler"
dynamic = ["version"]
description = "Production-grade backup orchestration: local, SSH, S3, and MySQL with encryption, deduplication, and manifests."
readme = "ReadMe.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "SP1R4" }]
keywords = ["backup", "encryption", "s3", "ssh", "mysql", "deduplication"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Archiving :: Backup",
    "Topic :: Security :: Cryptography",
]
dependencies = [
    "boto3>=1.28.0",
    "colorama>=0.4.6",
    "cryptography>=43.0.0",
    "keyring>=25.0.0",
    "paramiko>=3.4.0",
    "pyminizip>=0.2.6",
    "pyTelegramBotAPI>=4.22.0",
    "requests>=2.32.0",
    "retrying>=1.3.4",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-requests",
    "types-paramiko",
    "pre-commit>=3.7",
]
test = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
]
security = [
    "bandit>=1.7",
    "pip-audit>=2.7",
]

[project.scripts]
backup-handler = "main:main"

[project.urls]
Homepage = "https://github.com/SP1R4/BackupHandler"
Source = "https://github.com/SP1R4/BackupHandler"
Issues = "https://github.com/SP1R4/BackupHandler/issues"
Changelog = "https://github.com/SP1R4/BackupHandler/blob/main/CHANGELOG.md"

[tool.hatch.version]
path = "src/__version__.py"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# ─── Ruff ───────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 110
target-version = "py310"
extend-exclude = [
    "venv",
    "skili",
    "banner",
    "bot",
    "db_backup",
    "email_nots",
    "BackupTimestamp",
    "snapshots",
    "Logs",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "S",    # flake8-bandit (security)
    "N",    # pep8-naming
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]
ignore = [
    "E501",   # handled by formatter
    "S101",   # assert in tests is fine
    "S603",   # subprocess without shell=False — audited
    "S607",   # partial executable path — intentional (mysqldump, tailscale)
    "N806",   # allow non-snake_case for local config keys
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105", "S106", "S311", "N802"]
"src/test.py" = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ─── Black ──────────────────────────────────────────────────────────────────
[tool.black]
line-length = 110
target-version = ["py310", "py311", "py312"]
extend-exclude = '''
/(
  \.git
  | venv
  | skili
  | banner
  | bot
  | db_backup
  | email_nots
  | snapshots
  | Logs
  | BackupTimestamp
)/
'''

# ─── Mypy ───────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
check_untyped_defs = true
no_implicit_optional = true
strict_equality = true
exclude = [
    "venv/",
    "skili/",
    "banner/",
    "bot/",
    "db_backup/",
    "email_nots/",
    "snapshots/",
    "Logs/",
    "BackupTimestamp/",
]

[[tool.mypy.overrides]]
module = [
    "paramiko.*",
    "pyminizip.*",
    "telebot.*",
    "keyring.*",
    "retrying.*",
]
ignore_missing_imports = true

# ─── Pytest ─────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--tb=short",
]
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "integration: marks tests requiring external services (deselect with '-m \"not integration\"')",
    "slow: marks slow tests",
]

# ─── Coverage ───────────────────────────────────────────────────────────────
[tool.coverage.run]
branch = true
source = ["src"]
omit = [
    "*/tests/*",
    "*/venv/*",
    "src/__version__.py",
]

[tool.coverage.report]
precision = 1
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

# ─── Bandit ─────────────────────────────────────────────────────────────────
[tool.bandit]
exclude_dirs = ["tests", "venv", "skili", "banner", "bot", "db_backup", "email_nots"]
skips = [
    "B101",  # assert_used — fine in tests
    "B404",  # subprocess import — audited usage
    "B603",  # subprocess with list args — audited (no shell, fixed binaries)
]
